fix img width on small devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -297,7 +297,8 @@ pre {
     text-align: left;
   }
   .pub .col-sm-5 p img {
-    max-height: 95px;
+    /* max-height: 95px; */
+    max-width: 200px;
   }
 }
 
